--- a/frontend/templates.css
+++ b/frontend/templates.css
@@ -1,12 +1,12 @@
 .templates-page {
     max-width: 1300px;
     margin: 0 auto;
-    padding: 80px 5%;
+    padding: 40px 5% 80px;
 }
 
 .templates-header {
     text-align: center;
-    margin-bottom: 70px;
+    margin-bottom: 40px;
 }
 
 .page-title {
@@ -135,7 +135,7 @@
 }
 
 .template-preview {
-    height: 550px;
+    height: 350px;
     position: relative;
     overflow: hidden;
     background: #0f172a;
